# ChangeLog for dev-perl/TermReadKey
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/TermReadKey/ChangeLog,v 1.26 2008/09/10 04:53:46 tove Exp $

  10 Sep 2008; Torsten Veller <tove@gentoo.org> TermReadKey-2.30.ebuild:
  Remove mymake="/usr"

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> TermReadKey-2.30.ebuild:
  keyword ~sparc-fbsd

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> TermReadKey-2.30.ebuild:
  keyword ~x86-fbsd

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -TermReadKey-2.21.ebuild, TermReadKey-2.30.ebuild:
  Version bump, thanks seemant

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  TermReadKey-2.21.ebuild, TermReadKey-2.30.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  25 Feb 2006; Joshua Kinard <kumba@gentoo.org> TermReadKey-2.30.ebuild:
  Marked stable on mips.

  06 Feb 2006; Simon Stelling <blubb@gentoo.org> TermReadKey-2.30.ebuild:
  stable on amd64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> TermReadKey-2.30.ebuild:
  Mark 2.30 stable on alpha

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> TermReadKey-2.30.ebuild:
  Stable on ppc64

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  TermReadKey-2.30.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  TermReadKey-2.30.ebuild:
  marking sparc x86 stable

*TermReadKey-2.30 (27 Apr 2005)

  27 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  TermReadKey-2.21.ebuild, +TermReadKey-2.30.ebuild:
  Package gone upstream. Put on mirror, bumped to the latest greatest on cpan.
  Looks like all of our ebuilds are missing real SRC's now upstream except 2.30.

  04 Jan 2005; Michael Cummings <mcummings@gentoo.org>
  TermReadKey-2.19-r1.ebuild, TermReadKey-2.19.ebuild,
  TermReadKey-2.21.ebuild:
  bug 76590

  14 Mar 2004; Tom Gall <tgall@gentoo.org> TermReadKey-2.21.ebuild:
  stable on ppc64

*TermReadKey-2.21 (03 Jun 2003)
