@@ -1,4 +1,4 @@
 DIST TermReadKey-2.30.tar.gz 37006 RMD160 4ad3001ca0e62d6ca10d90dff5e1e2aeaa5bd1d7 SHA1 920353a44e779b69109149694e3097482deeb83b SHA256 8c4c70bf487f2e432046dce07cf4b77ff181667d0905f9cb1203ff95ff5dd5ff
-EBUILD TermReadKey-2.30.ebuild 608 RMD160 4e9aeeaf95a244e8dd7f84c0a8f375a40a946bb2 SHA1 63efc56d14872746744fcc5315540cec3f83c158 SHA256 c37457b8c67a33a256959e338139f4e6ea5bfde72e5d19da4316a62bfe440079
-MISC ChangeLog 2849 RMD160 223642f5010fd3278372be07be74f86753b5600a SHA1 57a60222473e6153cf976499493cf59e24f6cca4 SHA256 121b86448f38e29c46701c83638a64e285ed2ed654e784c5f70ff2259b9a02ca
+EBUILD TermReadKey-2.30.ebuild 505 RMD160 2389b01afe12c079487514b2cef531374a860264 SHA1 241f664097b99681435c38a012c9a620590e1722 SHA256 bc56b44e32611a9022b2f6548706f067578cae77affded3f2488a978cad82185
+MISC ChangeLog 2986 RMD160 59e91c27581fb8a8aa4c93f451850fb6d6fc3d64 SHA1 5a4bb335e5153813040b9407f9569118e273bcbb SHA256 a606a7334ef4d6f21e558c4fb9a8746ad6b9ee91bef8298e28594ac43b59ae6c
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
