@@ -1,18 +1,15 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/TermReadKey/TermReadKey-2.30.ebuild,v 1.15 2008/09/10 04:53:46 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/TermReadKey/TermReadKey-2.30.ebuild,v 1.16 2009/03/06 11:57:51 tove Exp $
 
-EAPI="prefix"
+EAPI="prefix 2"
 
+MODULE_AUTHOR=JSTOWE
 inherit perl-module
 
 DESCRIPTION="Change terminal modes, and perform non-blocking reads"
-HOMEPAGE="http://search.cpan.org/~jstowe/"
-SRC_URI="mirror://cpan/authors/id/J/JS/JSTOWE/${P}.tar.gz"
 
 LICENSE="Artistic"
 SLOT="0"
 KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris"
 IUSE=""
-
-DEPEND="dev-lang/perl"
